# Shin-gema.github.io

./: CNAME  README.md  index.html
.github/workflows/: static.yml
tests/: cover  myhaskellproject.cabal
tests/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
tests/test/: Checker.hs  Push.hs  PushSwapChecker.hs  Rotation.hs  Spec.hs  Swap.hs
