cabal-version:      2.4
name:               myhaskellproject
version:            0.1.0.0
extra-source-files: CHANGELOG.md

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
    base,
    HUnit,
    bytestring >=0.10.12.1,
    text >=1.2.5.0
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -fhpc

